// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductsGridView component renders correctly when empty 1`] = `
<div>
  <p
    class="MuiTypography-root Typography-root-1 MuiTypography-body1"
    data-testid="typography"
  >
    MC: plp.product.noResultsFound
  </p>
</div>
`;

exports[`ProductsGridView component renders correctly when not empty 1`] = `
<div>
  <div
    class="MuiGrid-root Grid-item-9 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-4"
  >
    <a
      aria-disabled="false"
      class="MuiButtonBase-root OverviewCard-root-11 OverviewCard-clickable-14"
      data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"MC: plp.product.viewDetails\\",\\"action\\":\\"/no/name-code/?pathname=%2F\\"}"
      href="/no/name-code/?pathname=%2F"
      role="button"
      tabindex="0"
    >
      <img
        alt=" name"
        class="OverviewCard-headerPicture-17 Media-root-26 Media-contain-27"
        src="http://localhost:8000"
      />
      <div
        class="OverviewCard-body-18"
      >
        <h5
          class="MuiTypography-root OverviewCard-title-19 OverviewCard-noBrandLogo-20 Typography-root-28 MuiTypography-h5"
          data-testid="typography"
        >
          name
        </h5>
        
        <div
          class="OverviewCard-children-22 OverviewCard-text-21"
        >
          short-description
        </div>
        <div
          class="OverviewCard-footer-24"
        >
          <span
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-36 Anchorlink MuiTypography-colorPrimary"
            type="button"
          >
            <span>
              MC: plp.product.viewDetails
            </span>
            <svg
              aria-hidden="true"
              class="AnchorLink-icon-40"
              data-testid="internal"
              focusable="false"
            />
          </span>
        </div>
      </div>
      <span
        class="MuiTouchRipple-root"
      />
    </a>
  </div>
</div>
`;

exports[`ProductsGridView component renders correctly when not empty with filters from url 1`] = `
<div>
  <div
    class="MuiGrid-root Grid-item-42 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-4"
  >
    <a
      aria-disabled="false"
      class="MuiButtonBase-root OverviewCard-root-44 OverviewCard-clickable-47"
      data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"MC: plp.product.viewDetails\\",\\"action\\":\\"/no/name-code/?filters=%5B%7B%22name%22%3A%22brand%22%2C%22value%22%3A%5B%22BMI_Components%22%5D%7D%5D&pathname=search&q=query\\"}"
      href="/no/name-code/?filters=%5B%7B%22name%22%3A%22brand%22%2C%22value%22%3A%5B%22BMI_Components%22%5D%7D%5D&pathname=search&q=query"
      role="button"
      tabindex="0"
    >
      <img
        alt=" name"
        class="OverviewCard-headerPicture-50 Media-root-59 Media-contain-60"
        src="http://localhost:8000"
      />
      <div
        class="OverviewCard-body-51"
      >
        <h5
          class="MuiTypography-root OverviewCard-title-52 OverviewCard-noBrandLogo-53 Typography-root-61 MuiTypography-h5"
          data-testid="typography"
        >
          name
        </h5>
        
        <div
          class="OverviewCard-children-55 OverviewCard-text-54"
        >
          short-description
        </div>
        <div
          class="OverviewCard-footer-57"
        >
          <span
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover AnchorLink-root-69 Anchorlink MuiTypography-colorPrimary"
            type="button"
          >
            <span>
              MC: plp.product.viewDetails
            </span>
            <svg
              aria-hidden="true"
              class="AnchorLink-icon-73"
              data-testid="internal"
              focusable="false"
            />
          </span>
        </div>
      </div>
      <span
        class="MuiTouchRipple-root"
      />
    </a>
  </div>
</div>
`;
